# mcp-cabinets

./: .gitignore  README.md
api-service/: README.md  config.py  models.py  pyproject.toml  server.py
api-service/scripts/: cli.sh
api-service/scripts/datastore/: clear.sh  pseudo.sh
api-service/scripts/tests/: test_api.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MOVEMENT.md  TODO.md
mcp-service/: README.md  client.py  config.py  mcp.config.json  mcp_server.py  pyproject.toml
mcp-service/__tests__/: test_mcp.py
