[project]
name = "api-service"
version = "0.0.1"
description = "API Service provides a FastAPI-based semantic search and context indexing backend, using LlamaIndex and FAISS for cabinet-based document storage and retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.12.0",
    "fastapi==0.116.1",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-vector-stores-faiss>=0.5.0",
    "llama-index[vector-stores]>=0.13.2",
    "numpy==2.3.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
]
